# ddssa

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  README.rst  codecov.yml  main.py  pylint_and_testing.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-and-verify.yaml  pylint.yml  pylint_and_testing.yml  verify.yml
CCPPrototype/: ccp_parser_py.py
CCPPrototype/SamplePythonFiles/: target_py.py  test_zoia_py.py
capstone_project/: directory_parser.py
capstone_project/backend/: api.py  ast_coordinator.py  ast_supplier.py  directory_parser.py  html_generator.py  path_parser.py  pdf_generator.py  req_parser.py  sr_calculator.py  stall_statements.txt
capstone_project/backend/api/: vulnerability_aggregator.py  vulnerability_query.py
capstone_project/backend/ast/: ast_coordinator.py  ast_supplier.py  libcst_ast.py
capstone_project/backend/cst/: ast_coordinator.py  cst_supplier.py
capstone_project/backend/file_generator/: file_export.py  html_generator.py
capstone_project/backend/metrics/: sr_calculator.py  sr_ids.py  stall_statements.json  stall_visitor.py
capstone_project/backend/parsing/: package_ids.py  package_parser.py  package_supplier.py  path_parser.py  pip_parser.py  poetry_lock_parser.py  pyproject_parser.py  req_parser.py  setup_parser.py
capstone_project/common/package_example_files/: requirements.txt
capstone_project/common/schemas/: query_schema_cpe.json  response_schema_cpe.json
capstone_project/frontend/: __init__.py  ddssa.py  loading.py  main.py  main.ui  qt_ui.py  ui.py  user_interface.py
capstone_project/frontend/assets/: report.css
capstone_project/tests/: test_ast_supp.py  test_html_generator.py  test_libcst_new.py  test_package_parsers.py  test_pip_parser.py  test_poetry_lock_parser.py  test_pyproject_parser.py  test_req_parser.py  test_setup_parser.py  test_sr.py  test_vulnerability_query.py
capstone_project/tests/package_test_files/: bad_requirements.txt  bad_requirements_2.txt  requirements.txt
capstone_project/tests/schemas/: response_schema_cpe.json
capstone_project/tests/static_test_files/: sr_medium.py
capstone_project/tests/test_files/: sr_advanced.py  sr_none.py  sr_simple.py
ddssa/backend/api/: vulnerability_aggregator.py  vulnerability_query.py
ddssa/backend/cst/: ast_coordinator.py  cst_supplier.py
ddssa/frontend/: ddssa.py  loading.py  main.py  main.ui  ui.py
ddssa/tests/: test_ast_supp.py  test_html_generator.py  test_pip_parser.py  test_poetry_lock_parser.py  test_pyproject_parser.py  test_req_parser.py  test_setup_parser.py  test_sr.py  test_utils.py  test_vulnerability_query.py  utils.py
ddssa/tests/package_test_files/setup_good/: setup.cfg  setup.py
documentation/: Threading Analysis - DDSSA.xlsx
documentation/sample_reports/: report_apache.html  report_capstone.html  report_zoia.html
tests/: test_capstone_project.py
(+25 files in other folders)
