[tool.poetry]
name = "ddssa"
version = "1.0.0"
description = "Data-Driven Software Security Assessment"
authors = ["Khalil Aalab <khalil.aalab@carleton.ca>", "John Breton <john.breton@carleton.ca>", "Samuel Gamelin <samuel.gamelin@carleton.ca>", "Mohamed Radwan <mohamed.radwan@carleton.ca>"]

[tool.poetry.dependencies]
dparse = "^0.5.2"
jsonschema = "^4.4.0"
libcst = "^0.4.1"
numpy = "^1.22.3"
pandas = "^1.3.5"
pycvesearch = "^1.0.1"
PyQt5 = "^5.15.6"
python = "^3.9"
requests = "^2.27.1"
requirements-parser = "^0.3.1"
setup-py-upgrade = "^1.2.1"
setup-cfg-fmt = "^1.20.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "^6.3"
pylint = "^2.13.5"

[tool.black]
extend-exclude = 'main.py'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
