[tool.poetry]
name = "ddssa"
version = "1.0.0"
description = "Data-Driven Software Security Assessment"
authors = ["Khalil Aalab <khalil.aalab@carleton.ca>", "John Breton <john.breton@carleton.ca>", "Samuel Gamelin <samuel.gamelin@carleton.ca>", "Mohamed Radwan <mohamed.radwan@carleton.ca>"]

[tool.black]
extend-exclude = 'main.py'

[tool.pytest.ini_options]
addopts = "-ra -q --cov=ddssa/backend --cov=ddssa/frontend"
testpaths = [
    "ddssa/tests"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
