[metadata]
name = setup_example
version = 0.0.1
description = setup example
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mo-5/ddssa
author = johnbretoon
author_email = johnbreton@cmail.carleton.com
license = The Unlicence

[options]
packages = find:
install_requires =
    docutils
    jsonschema==4.1.*
    requests>=2
python_requires = ~=3.5

[options.packages.find]
exclude =
    tests*
    testing

[options.entry_points]
console_scripts =
    setup-demo = frontend.ui:main
